--- a/templates/usr/search_details.html
+++ b/templates/usr/search_details.html
@@ -2,8 +2,6 @@
 {% block  content %}
     {% load static %}
     {% for key1,val1 in details.items %}
-
-
         {% if key1 == "resource" %}
 {#            {{ key1 }} --> {{ val1 }} <br>#}
             {% for key2,val2 in val1.items %}
@@ -30,41 +28,76 @@
                         {% for key3,val3 in list_data.items %}
 {#                            {{ key3 }} -->  {{ val3 }} <br>#}
                             {% if key3 == "audioLanguage" %}
-                                Language - {{ val3 }}
+                                Language - {{ val3 }}<br>
+                            {% endif %}
+                            {% if key3 == "contentType" %}
+                                Type Of Content - {{ val3 }}<br>
                             {% endif %}
                             {% if key3 == "type" %}
-                                Type - {{ val3 }}
+                                Type - {{ val3 }} <br>
                             {% endif %}
                             {% if key3 == "description" %}
-                                Description - {{ val3 }}
+                                Description - {{ val3 }}<br>
                             {% endif %}
                             {% if key3 == "durationInSeconds" %}
-                                Duration(sec) - {{ val3 }}
+                                Duration(sec) - {{ val3 }} <br>
                             {% endif %}
                             {% if key3 == "id" %}
-                                <a href="{% url 'user_watch_video' %}?vid={{ val3 }}">Click Here To Watch</a>
+                                <a href="{% url 'user_watch_video' %}?vid={{ val3 }}">Click Here To Watch</a><br>
                             {% endif %}
                             {% if key3 == "image" %}
                                 {% for key4,val4 in val3.items %}
-                                    {{ key4 }} -->  {{ val4 }} <br>
+                                    {% if key4 == "url" %} <br>
+                                        Image - <img src="{{ val4 }}" height="150" width="150"><br>
+                                    {% endif %}
                                 {% endfor %}
                             {% endif %}
                             {% if key3 == "primaryTitle" %}
+                                Primary Title -:<br>
                                 {% for key5,val5 in val3.items %}
-                                    {{ key5 }} --> {{ val5 }}  <br>
+                                    {% if key5 == "title" %}
+                                        Title - {{ val5 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key5 == "titleType" %}
+                                        Title Type - {{ val5 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key5 == "year" %}
+                                        Year - {{ val5 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key5 == "episode" %}
+                                        Episode - {{ val5 }}  &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key5 == "year" %}
+                                        Season - {{ val5 }}  &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
                                     {% if key5 == "image" %}
                                         {% for key6,val6 in val5.items %}
-                                            {{ key6 }} --> {{ val6 }}  <br>
+                                            {% if key6 == 'url' %}
+                                                <br>Image - <img src="{{ val6 }}" height="150" width="150"><br>
+                                            {% endif %}
                                         {% endfor %}
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
+                            {% if key3 == "title" %}
+                                Title - {{ val3 }}<br>
+                            {% endif %}
                             {% if key3 == "parentTitle" %}
                                 {% for key7,val7 in val3.items %}
-                                    {{ key7 }} -->  {{ val7 }}  <br>
+                                    {% if key7 == "title" %}
+                                        Title - {{ val7 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key7 == "titleType" %}
+                                        Title Type - {{ val7 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
+                                    {% if key7 == "year" %}
+                                        Year - {{ val7 }} &nbsp;&nbsp;&nbsp;
+                                    {% endif %}
                                     {% if key7 == "image" %}
                                         {% for key8,val8 in val7.items %}
-                                            {{ key8 }} -->  {{ val8 }}  <br>
+                                            {% if key8 == "url" %}
+                                               <br> Image - {{ val8 }}
+                                            {% endif %}
                                         {% endfor %}
                                     {% endif %}
                                 {% endfor %}
@@ -74,15 +107,6 @@
                 {% endif %}
             {% endfor %}
         {% endif %}
-
-
-
-
-
-
-
-
-
     {% endfor %}
 {% endblock %}
 
