--- a/templates/common.html
+++ b/templates/common.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>IMDB Alternative</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-{#  <a class="navbar-brand" href="#">Navbar</a>#}
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:lightskyblue">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,24 +21,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'main' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'main' %}"><span style="font-size: 30px;">Home</span> <span class="sr-only">(current)</span></a>
       </li>
 {#      <li class="nav-item">#}
 {#        <a class="nav-link" href="#">Link</a>#}
 {#      </li>#}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Login
+            <span style="font-size: 30px;">Login</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{% url 'show_user_register' %}">Register</a>
           <a class="dropdown-item" href="{% url 'show_user_login' %}">User Login</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Admin Login</a>
+{#          <a class="dropdown-item" href="#">Admin Login</a>#}
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#" tabindex="-1" >mymovies.com</a>
+        <a class="nav-link " href="{% url 'main' %}" tabindex="-1"><span style="font-size: 40px;font-weight: bold;text-shadow: green;color:violet;margin-left: 300px">mymovies.com</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="{% url 'search_movie' %}" method="get">
@@ -50,7 +50,11 @@
 
     {% block content %}
     {% endblock %}
-
+    <div class="card">
+        <div class="card-header">
+            <h3 align="center">copyrights @mymovies.com-2020</h3>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
