--- a/templates/usr/user_login.html
+++ b/templates/usr/user_login.html
@@ -4,13 +4,14 @@
     {% csrf_token %}
         <br>
     <table align="center" border="4">
-        <tr><th>User Login</th></tr>
+        <tr><th class="table_heading">User Login</th></tr>
         {% if error %}
-            <tr><th>{{ error }}</th></tr>
+            <tr><th class="error_mess">{{ error }}</th></tr>
         {% endif %}
-        <tr><th><input type="email" placeholder="Email" required name="email"></th></tr>
-        <tr><th><input type="password" placeholder="Password" required name="password"></th></tr>
-        <tr><th><button type="submit">Login</button></th></tr>
+        <tr><th><input class="inputText" type="email" placeholder="Email" required name="email"></th></tr>
+        <tr><th><input class="inputText" type="password" placeholder="Password" required name="password"></th></tr>
+        <tr><th style="text-align: center"><button type="submit" class="table_button">Login</button></th></tr>
     </table>
     </form>
+    <br><br>
 {% endblock %}
