--- a/templates/usr/video.html
+++ b/templates/usr/video.html
@@ -1,4 +1,4 @@
 {% extends 'common.html' %}
 {% block content %}
-    <h2 align="center"><video controls src="{{ link }}"></video></h2>
+    <h2 align="center" style="margin-top: 50px"><video controls src="{{ link }}"></video></h2>
 {% endblock %}
